# WarGameServer

./: CMakeLists.txt  ChatService.h  Database.h  README.md  UserService.h  cert.key  compile.sh  libmongocxx.so._noabi  main.cpp  web.h
GameCore/: GameCore.cpp  GameCore.h
GameServer/: a.out  cert.pem  compile.sh  main.cpp
UnitTest/: TestChatService.cpp  TestUserService.cpp  end.sh  startup.sh  tags  unittest  unittest.sh
src/ChatServer/: CMakeLists.txt  cert.key  cert.pem  main.cpp
src/GameCallServer/: CMakeLists.txt  main.cpp
src/GameCallServer/service/: gamecallserver
src/GameCore/: GameCore.cpp
src/GameServer/: CMakeLists.txt  compile.sh  main.cpp
src/RPC/: rpc.cpp  rpc.h
src/RoomServer/: CMakeLists.txt  main.cpp
src/RoomServer/service/: roomserver
src/Service/: ChatService.h  Database.h  RoomService.h  UserService.h
src/UnitTest/: TestChatService.cpp  TestUserService.cpp  UnitTest.cpp  startup.sh  unittest.sh
src/UserServer/: CMakeLists.txt  compile.sh  main.cpp
src/UserServer/service/: userserver
src/UserServer/view/home/: chat.html  index.html
src/WebServer/: CMakeLists.txt  main.cpp
src/WebServer/service/: webserver
src/WebServer/view/home/: index.html
src/WebServer/wwwroot/: main.690be.js  main.bc4dd.js
src/WebServer/wwwroot/res/import/05/: 051800a6b.5b2e0.json
src/WebServer/wwwroot/res/import/06/: 069e2b58d.a5ab3.json
src/WebServer/wwwroot/res/import/09/: 09f6ebb60.8ea8e.json
src/WebServer/wwwroot/res/import/0e/: 0ec1cfdf5.5c742.json
src/WebServer/wwwroot/src/: project.47ab9.js  project.74c5e.js  settings.6d2a5.js  settings.de8f8.js
src/include/: web.h
src/lib/mongo-cxx-driver/lib/: libbsoncxx.so.3.6.0
src/lib/mongo-cxx-driver/lib/cmake/bsoncxx-3.6.0/: bsoncxx_targets.cmake
src/lib/mongo-cxx-driver/lib/pkgconfig/: libbsoncxx.pc  libmongocxx.pc
view/home/: .index.html.swp  chat.html  index.html
